
0.04  2013-02-10
  - Added collection_names method to Mango::Database.
  - Added aggregate, build_index_name, find_and_modify and save methods to
    Mango::Collection.
  - Fixed exception handling for commands.

0.03  2013-02-09
  - Added hint, snapshot and tailable attributes to Mango::Cursor.
  - Added create, drop and ensure_index methods to Mango::Collection.
  - Added build_query, clone and explain methods to Mango::Cursor.
  - Added command_error and query_failure methods to Mango::Protocol.
  - Improved documentation.
  - Improved tests.
  - Fixed array encoding in Mango::BSON.
  - Fixed small exception handling bugs in Mango.

0.02  2013-02-07
  - Added batch_size attribute to Mango::Cursor.
  - Added count method to Mango::Cursor.
  - Added next_id method to Mango::Protocol.
  - Added multi and upsert options to update method in Mango::Collection.
  - Added single option to remove method in Mango::Collection.
  - Changed reply format from array to hash.
  - Improved documentation.
  - Improved tests.
  - Fixed a few exception handling bugs.
  - Fixed limit functionality in Mango::Cursor.
  - Fixed a few small timing bugs in Mango::Cursor.

0.01  2013-02-06
  - First release.